# ml-image-classification-example-for-pico-w

./: .gitmodules  CMakeLists.txt  README.md  parking_spot_classification.ipynb
src/: image_classifier.cpp  image_classifier.h  main.cpp  tflite_model.h
